# superpose3D

./: CMakeLists.txt  README.html  README.md  README.txt
data/: pdb_res_dict.txt  pints_par.txt  query3d_par.txt  schmitt_par.txt
src/: Amino.cpp  Amino.h  CMakeLists.txt  Chain.cpp  Chain.h  ChainWrapper.cpp  ChainWrapper.h  Comparison.cpp  Comparison.h  DefinitionCenter.cpp  DefinitionCenter.h  Job.cpp  Job.h  Match.cpp  Match.h  PdbParser.cpp  PdbParser.h  PdbResidueDictionary.cpp  PdbResidueDictionary.h  PseudoResidue.cpp  PseudoResidue.h  Quaternion.cpp  Quaternion.h  ResidueDefinition.cpp  ResidueDefinition.h  SimilarityMatrix.cpp  SimilarityMatrix.h  Superposition.cpp  Superposition.h  Tree.cpp  Tree.h  common.h  main.cpp  string_ops.cpp  superpose.cpp  superpose.h  superpose_pdb_files.cpp
